Final commit all documentation